--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
    
 
  <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<script>
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyCJdlc8017r6FkQwpFhCqOauw62t797_9w",
-    authDomain: "fruit-catcher-5ad1e.firebaseapp.com",
-    databaseURL: "https://fruit-catcher-5ad1e-default-rtdb.firebaseio.com",
-    projectId: "fruit-catcher-5ad1e",
-    storageBucket: "fruit-catcher-5ad1e.appspot.com",
-    messagingSenderId: "993009870042",
-    appId: "1:993009870042:web:c7dc6bd802df06940971e3"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
+ <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+ 
+ <!--Add database config here below-->
+   <script>
+   var firebaseConfig = {
+   apiKey: "AIzaSyCeFLF1DK1pC6MdXBpevtHV9RHNsZ7wSNA",
+   authDomain: "fruit-collector-2db21.firebaseapp.com",
+   databaseURL: "https://fruit-collector-2db21-default-rtdb.firebaseio.com",
+   projectId: "fruit-collector-2db21",
+   storageBucket: "fruit-collector-2db21.appspot.com",
+   messagingSenderId: "889000994887",
+   appId: "1:889000994887:web:134a6a085ad8a0db516962"
+ };
+   firebase.initializeApp(firebaseConfig);
+   </script>
   
   
  
